JCS full with products

--- a/src/components/locales/ar.json
+++ b/src/components/locales/ar.json
@@ -56,23 +56,25 @@
   "Moins": "المختصر",
   "Rédigez votre message...": "أرسل رساله",
   "Connecté": "متصل",
-  "Entrez votre code de verification" : "ادخل رمز التفعيل",
-  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone" : "تم إرسال رمز مكون من 4 أرقام إلى رقم هاتفك",
-  "Verification" : "التأكد",
-  "Bienvenue sur notre site" : "مرحبا بكم في موقعنا",
-  "Découvrez nos services" : "اكتشفو خدماتنا",
-  "Services" : "الخدمات",
-  "Création d'applications web et mobile" : "إنشاء تطبيقات الويب والهواتف المحمولة",
-  "Location de voiture" : "تأجير السيارات",
-  "Commandez les pièces rares depuis l'étranger" : "طلب قطع غيار نادرة من الخارج",
-  "Autres service numérique" : "خدمات رقمية أخرى",
-  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous." : "نحن نقدم مجموعة واسعة من السيارات لتلبية جميع احتياجاتك. سواء كانت رحلة عمل أو عطلة عائلية، لدينا السيارة المثالية لك",
-  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin." : "هل تحتاج إلى قطع غيار نادرة لسيارتك؟ نحن نسهل عليك الأمر من خلال السماح لك بطلب هذه الأجزاء من الخارج. تضمن شبكتنا  توفر القطع التي تحتاجها ",
-  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences." : "نحن متخصصون في تطوير تطبيقات الويب والهواتف المحمولة المخصصة. بدءًا من التصميم ووصولاً إلى البث المباشر، يدعمك فريقنا ذو الخبرة في كل خطوة على الطريق لإنشاء تطبيقات تلبي احتياجاتك ومتطلباتك بشكل مثالي",
-  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise." : " يقدم فريقنا أيضًا خدمات تطوير تطبيقات الويب والهاتف المحمول. نحن نطبق أحدث التقنيات لإنشاء حلول رقمية مبتكرة تساعد أعمالك على التطور",
-  "Contactez-nous" : "إتصل بنا",
-  "Message" : "الرسالة",
-  "Envoyer" : "إرسال",
-  "Qui nous sommes" : "من نحن",
-  "FAQ" : "أ م غ"
+  "Entrez votre code de verification": "ادخل رمز التفعيل",
+  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone": "تم إرسال رمز مكون من 4 أرقام إلى رقم هاتفك",
+  "Verification": "التأكد",
+  "Bienvenue sur notre site": "مرحبا بكم في موقعنا",
+  "Découvrez nos services": "اكتشفو خدماتنا",
+  "Services": "الخدمات",
+  "Création d'applications web et mobile": "إنشاء تطبيقات الويب والهواتف المحمولة",
+  "Location de voiture": "تأجير السيارات",
+  "Commandez les pièces rares depuis l'étranger": "طلب قطع غيار نادرة من الخارج",
+  "Autres service numérique": "خدمات رقمية أخرى",
+  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.": "نحن نقدم مجموعة واسعة من السيارات لتلبية جميع احتياجاتك. سواء كانت رحلة عمل أو عطلة عائلية، لدينا السيارة المثالية لك",
+  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.": "هل تحتاج إلى قطع غيار نادرة لسيارتك؟ نحن نسهل عليك الأمر من خلال السماح لك بطلب هذه الأجزاء من الخارج. تضمن شبكتنا  توفر القطع التي تحتاجها ",
+  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.": "نحن متخصصون في تطوير تطبيقات الويب والهواتف المحمولة المخصصة. بدءًا من التصميم ووصولاً إلى البث المباشر، يدعمك فريقنا ذو الخبرة في كل خطوة على الطريق لإنشاء تطبيقات تلبي احتياجاتك ومتطلباتك بشكل مثالي",
+  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.": " يقدم فريقنا أيضًا خدمات تطوير تطبيقات الويب والهاتف المحمول. نحن نطبق أحدث التقنيات لإنشاء حلول رقمية مبتكرة تساعد أعمالك على التطور",
+  "Contactez-nous": "إتصل بنا",
+  "Message": "الرسالة",
+  "Envoyer": "إرسال",
+  "Qui nous sommes": "من نحن",
+  "FAQ": "أ م غ",
+  "Nos Produits Numériques": "منتجاتنا الرقمية",
+  "Découvrir": "إكتشف"
 }
