--- a/src/components/locales/en.json
+++ b/src/components/locales/en.json
@@ -56,23 +56,25 @@
   "Moins": "Less",
   "Rédigez votre message...": "Type a message...",
   "Connecté": "Online",
-  "Entrez votre code de verification" : "Enter your verification code",
-  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone" : "A 4-digit code has been sent to your phone number",
-  "Verification" : "Verification",
-  "Bienvenue sur notre site" : "Welcome to our website",
-  "Découvrez nos services" : "Discover our services",
-  "Services" : "Services",
-  "Création d'applications web et mobile" : "Creation of web and mobile applications",
-  "Location de voiture" : "Car rental",
-  "Commandez les pièces rares depuis l'étranger" : "Order rare pieces from abroad",
-  "Autres service numérique" : "Other digital services",
-  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous." : "We offer a wide range of rental cars to meet all your needs. Whether it's a business trip or a family vacation, we have the ideal vehicle for you.",
-  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin." : "Do you need rare spare parts for your vehicle? We make it easier for you by allowing you to order these parts from abroad. Our global network of suppliers ensures the parts you need are available.",
-  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences." :"We specialize in the development of custom web and mobile applications. From design to go live, our experienced team supports you every step of the way to create applications that perfectly meet your needs and requirements.",
-  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise." : "Our talented team also offers web and mobile application development services. We implement the latest technologies to create innovative digital solutions that help your business grow.",
-  "Contactez-nous" : "Contact us",
-  "Message" : "Message",
-  "Envoyer" : "Send",
-  "Qui nous sommes" : "Who we are",
-  "FAQ" : "FAQ"
+  "Entrez votre code de verification": "Enter your verification code",
+  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone": "A 4-digit code has been sent to your phone number",
+  "Verification": "Verification",
+  "Bienvenue sur notre site": "Welcome to our website",
+  "Découvrez nos services": "Discover our services",
+  "Services": "Services",
+  "Création d'applications web et mobile": "Creation of web and mobile applications",
+  "Location de voiture": "Car rental",
+  "Commandez les pièces rares depuis l'étranger": "Order rare pieces from abroad",
+  "Autres service numérique": "Other digital services",
+  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.": "We offer a wide range of rental cars to meet all your needs. Whether it's a business trip or a family vacation, we have the ideal vehicle for you.",
+  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.": "Do you need rare spare parts for your vehicle? We make it easier for you by allowing you to order these parts from abroad. Our global network of suppliers ensures the parts you need are available.",
+  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.": "We specialize in the development of custom web and mobile applications. From design to go live, our experienced team supports you every step of the way to create applications that perfectly meet your needs and requirements.",
+  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.": "Our talented team also offers web and mobile application development services. We implement the latest technologies to create innovative digital solutions that help your business grow.",
+  "Contactez-nous": "Contact us",
+  "Message": "Message",
+  "Envoyer": "Send",
+  "Qui nous sommes": "Who we are",
+  "FAQ": "FAQ",
+  "Nos Produits Numériques": "Our Digital Products",
+  "Découvrir": "Discover"
 }
