--- a/src/components/locales/fr.json
+++ b/src/components/locales/fr.json
@@ -56,23 +56,25 @@
   "Moins": "Moins",
   "Rédigez votre message...": "Rédigez votre message...",
   "Connecté": "Connecté",
-  "Entrez votre code de verification" : "Entrez votre code de verifivation",
-  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone" : "Un code à 4 chiffres a été envoyé à votre numéro de téléphone",
-  "Verification" : "Verification",
-  "Bienvenue sur notre site" : "Bienvenue sur notre site !",
-  "Découvrez nos services" : "Découvrez nos services",
-  "Services" : "Services",
-  "Création d'applications web et mobile" : "Création d'applications web et mobile",
-  "Location de voiture" : "Location de voiture",
-  "Commandez les pièces rares depuis l'étranger" : "Commandez les pièces rares depuis l'étranger",
-  "Autres service numérique" : "Autres service numérique",
-  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous." : "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.",
-  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin." : "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.",
-  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences." : "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.",
-  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise." : "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.",
-  "Contactez-nous" : "Contactez-nous",
-  "Message" : "Message",
-  "Envoyer" : "Envoyer",
-  "Qui nous sommes" : "Qui nous sommes",
-  "FAQ" : "FAQ"
+  "Entrez votre code de verification": "Entrez votre code de verifivation",
+  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone": "Un code à 4 chiffres a été envoyé à votre numéro de téléphone",
+  "Verification": "Verification",
+  "Bienvenue sur notre site": "Bienvenue sur notre site !",
+  "Découvrez nos services": "Découvrez nos services",
+  "Services": "Services",
+  "Création d'applications web et mobile": "Création d'applications web et mobile",
+  "Location de voiture": "Location de voiture",
+  "Commandez les pièces rares depuis l'étranger": "Commandez les pièces rares depuis l'étranger",
+  "Autres service numérique": "Autres service numérique",
+  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.": "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.",
+  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.": "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.",
+  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.": "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.",
+  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.": "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.",
+  "Contactez-nous": "Contactez-nous",
+  "Message": "Message",
+  "Envoyer": "Envoyer",
+  "Qui nous sommes": "Qui nous sommes",
+  "FAQ": "FAQ",
+  "Nos Produits Numériques": "Nos Produits Numériques",
+  "Découvrir": "Découvrir"
 }
