--- a/src/components/locales/hs.json
+++ b/src/components/locales/hs.json
@@ -56,23 +56,25 @@
   "Moins": "المختصر",
   "Rédigez votre message...": "مشي مساج",
   "Connecté": "مكونكتي",
-  "Entrez votre code de verification" : "دخل الكود ال جاك",
-  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone" : "مشينالك كود من 4 ارقام",
-  "Verification" : "التأكد",
-  "Bienvenue sur notre site" : "مرحبا بيكم فموقعنا",
-  "Découvrez nos services" : "شوفو خدماتنا",
-  "Services" : "الخدمات",
+  "Entrez votre code de verification": "دخل الكود ال جاك",
+  "Un code à 4 chiffres a été envoyé à votre numéro de téléphone": "مشينالك كود من 4 ارقام",
+  "Verification": "التأكد",
+  "Bienvenue sur notre site": "مرحبا بيكم فموقعنا",
+  "Découvrez nos services": "شوفو خدماتنا",
+  "Services": "الخدمات",
   "Création d'applications web et mobile": "تعدال التطبيقات والمواقع",
-  "Location de voiture" : "كيراي الوتات",
-  "Commandez les pièces rares depuis l'étranger" : "كوماندي قطع الغيار ال ادور من الخارج",
-  "Autres service numérique" : "خدمات رقمية أخرى",
-  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous." : " نقدمولكم مجموعة من الوتات للكيراي لتلبية جميع احتياجاتك. يسوا كانت رحلة عمل ول عطلة ، عندنا  لك الوته ال ادور",
-  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin." : "لعدت ادورقطع غيار نادرة لوته ول كميون؟ نحن نسهلك ذل ادور نكوماندولك ذل ادور من الخارج. نحن ضامنين طلباتكم و بالجوده ال ادورو",
-  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences." :"نحن متخصين فتعدالل تطبيقات الويب والهواتف المحمولة . من التصميم إلين نعطوك التطبيق، يدعمك فريقنا المتخصص فذ ف كل خطوة  لإنشاء تطبيقات تلبي احتياجاتك ومتطلباتك بشكل مثالي",
-  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise." : " يقدم فريقنا أيضًا خدمات تطوير تطبيقات الويب والهاتف المحمول. نحن نطبق أحدث التقنيات ياك نوفرو حلول رقمية مبتكرة تساعد أعمالك على التطور",
-  "Contactez-nous" : "اتصل بينا",
-  "Message" : "الرسالة",
-  "Envoyer" : "أرسل",
-  "Qui nous sommes" : "نحن منهوما",
-  "FAQ" :"أ م غ"
+  "Location de voiture": "كيراي الوتات",
+  "Commandez les pièces rares depuis l'étranger": "كوماندي قطع الغيار ال ادور من الخارج",
+  "Autres service numérique": "خدمات رقمية أخرى",
+  "Nous proposons une large gamme de voitures de location pour répondre à tous vos besoins. Que ce soit pour un voyage d'affaires ou des vacances en famille, nous avons le véhicule idéal pour vous.": " نقدمولكم مجموعة من الوتات للكيراي لتلبية جميع احتياجاتك. يسوا كانت رحلة عمل ول عطلة ، عندنا  لك الوته ال ادور",
+  "Vous avez besoin de pièces détachées rares pour votre véhicule ? Nous vous facilitons la tâche en vous permettant de commander ces pièces depuis l'étranger. Notre réseau mondial de fournisseurs garantit la disponibilité des pièces dont vous avez besoin.": "لعدت ادورقطع غيار نادرة لوته ول كميون؟ نحن نسهلك ذل ادور نكوماندولك ذل ادور من الخارج. نحن ضامنين طلباتكم و بالجوده ال ادورو",
+  "Nous sommes spécialisés dans le développement d'applications web et mobile sur mesure. De la conception à la mise en ligne, notre équipe expérimentée vous accompagne à chaque étape du processus pour créer des applications qui répondent parfaitement à vos besoins et exigences.": "نحن متخصين فتعدالل تطبيقات الويب والهواتف المحمولة . من التصميم إلين نعطوك التطبيق، يدعمك فريقنا المتخصص فذ ف كل خطوة  لإنشاء تطبيقات تلبي احتياجاتك ومتطلباتك بشكل مثالي",
+  "Notre équipe talentueuse offre également des services de développement d'applications web et mobile. Nous mettons en œuvre les dernières technologies pour créer des solutions numériques innovantes qui contribuent à la croissance de votre entreprise.": " يقدم فريقنا أيضًا خدمات تطوير تطبيقات الويب والهاتف المحمول. نحن نطبق أحدث التقنيات ياك نوفرو حلول رقمية مبتكرة تساعد أعمالك على التطور",
+  "Contactez-nous": "اتصل بينا",
+  "Message": "الرسالة",
+  "Envoyer": "أرسل",
+  "Qui nous sommes": "نحن منهوما",
+  "FAQ": "أ م غ",
+  "Nos Produits Numériques": "منتجاتنا الرقمية",
+  "Découvrir": "اكتشف"
 }
